Only prototype strtoll() and strtoull() if "long long" is supported. Fixes warnings from <stdlib.h> in files compiled with gcc -ansi -pedantic.

PR:		43780

Former-commit-id: 101ffb428bb85024a3ad0da62b542cbffe803aa4